--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,71 @@
 version: '3.8'
+
 services:
   nook:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        BUILDKIT_INLINE_CACHE: 1
+    image: nook:latest
     container_name: nook
     restart: unless-stopped
-    expose:
-      - "3000"
+    
+    ports:
+      - "3000:3000"
+    
     volumes:
+      # Données persistantes
       - ./data:/app/data
+      # Logs (optionnel)
+      - ./logs:/app/logs
+    
+    environment:
+      # Base de données
+      - DATABASE_URL=sqlite:/app/data/nook.db
+      
+      # Configuration de l'application
+      - STATIC_FILES_DIR=/app/static
+      - PORT=3000
+      
+      # Logs
+      - RUST_LOG=info
+      - RUST_BACKTRACE=1
+      
+      # Timezone (optionnel)
+      - TZ=Europe/Paris
+    
+    # Healthcheck
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 20s
+    
+    # Limites de ressources (optionnel mais recommandé)
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 512M
+        reservations:
+          cpus: '0.25'
+          memory: 128M
+    
+    networks:
+      - nook-network
+
+networks:
+  nook-network:
+    driver: bridge
+    name: nook-network
+
+# Optionnel : Configuration pour backup automatique
+volumes:
+  data:
+    driver: local
+    driver_opts:
+      type: none
+      device: ${PWD}/data
+      o: bind
