--- a/.github/workflows/ci-new2.yml
+++ b/.github/workflows/ci-new2.yml
@@ -133,10 +133,6 @@ jobs:
     name: 🎨 Frontend
     runs-on: ubuntu-latest
     
-    defaults:
-      run:
-        working-directory: ./frontend
-
     steps:
       - name: Checkout du code
         uses: actions/checkout@v4
@@ -146,18 +142,37 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: './frontend/package-lock.json'
+          cache-dependency-path: 'frontend/package-lock.json'
+
+      - name: Vérifier l'existence des fichiers
+        run: |
+          echo "Contenu du dossier frontend:"
+          ls -la frontend/
+          echo "Package-lock existe ?"
+          [ -f "frontend/package-lock.json" ] && echo "OUI" || echo "NON - génération..."
+
+      - name: Générer package-lock si absent
+        working-directory: ./frontend
+        run: |
+          if [ ! -f "package-lock.json" ]; then
+            echo "Génération de package-lock.json..."
+            npm install --package-lock-only
+          fi
 
       - name: Installer dépendances
+        working-directory: ./frontend
         run: npm ci
 
       - name: Vérifier le lint
+        working-directory: ./frontend
         run: npm run lint || echo "Lint non configuré"
 
       - name: Build
+        working-directory: ./frontend
         run: npm run build
 
       - name: Tests unitaires
+        working-directory: ./frontend
         run: npm test || echo "Tests non configurés"
 
   lint:
@@ -234,15 +249,6 @@ jobs:
             cargo audit || echo "Aucune vulnérabilité trouvée"
           else
             echo "cargo-audit non installé"
-          fi
-
-      - name: Vérifier les licences
-        run: |
-          cargo install cargo-deny 2>/dev/null || true
-          if command -v cargo-deny &> /dev/null; then
-            cargo deny check || echo "Vérification des licences terminée"
-          else
-            echo "cargo-deny non installé"
           fi
 
   build-docker:
