--- a/.github/workflows/prepare-sqlx.yml
+++ b/.github/workflows/prepare-sqlx.yml
@@ -1,6 +1,13 @@
 name: Generate SQLx Cache
 
-on: workflow_dispatch
+on:
+  workflow_dispatch
+  push:
+    branches: [main, develop]
+    paths:
+      - 'backend/src/**'
+      - 'backend/migrations/**'
+      - 'backend/Cargo.toml'
 
 jobs:
   generate-cache:
@@ -9,45 +16,44 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        
-      - name: Setup Rust
-        uses: dtolnay/rust-toolchain@master
         with:
-          toolchain: stable
-          
-      - name: Fix Cargo.toml
+          fetch-depth: 0  # Important pour pouvoir pousser
+
+      - name: Setup Rust
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Install dependencies
         run: |
-          cd backend
-          # Rétrograder à SQLx 0.7 qui a la feature 'offline'
-          sed -i 's/version = "0.8"/version = "0.7"/' Cargo.toml
-          echo "Cargo.toml modifié :"
-          cat Cargo.toml
-      
+          sudo apt-get update
+          sudo apt-get install -y libsqlite3-dev sqlite3
+
       - name: Install SQLx CLI
-        run: cargo install sqlx-cli --version 0.7.3 --no-default-features --features sqlite
-      
-      - name: Create database
         run: |
-          cd backend
+          # Utilisez la version correspondant à votre Cargo.toml
+          cargo install sqlx-cli --no-default-features --features sqlite
+
+      - name: Generate SQLx cache
+        working-directory: ./backend
+        run: |
           mkdir -p data
           sqlite3 data/temp.db "VACUUM;"
           
-      - name: Generate cache
-        run: |
-          cd backend
-          DATABASE_URL="sqlite:data/temp.db" cargo sqlx prepare || true
+          # Générer le cache pour toutes les cibles
+          DATABASE_URL="sqlite:data/temp.db" cargo sqlx prepare -- --all-targets
           
-      - name: Create cache if missing
+          echo "Contenu généré dans .sqlx/:"
+          find .sqlx -type f
+
+      - name: Commit and push cache
+        if: success()
         run: |
-          cd backend
-          if [ ! -d ".sqlx" ]; then
-            mkdir -p .sqlx
-            echo '{"db":"SQLite","queries":{}}' > .sqlx/query.json
+          git config --local user.name "GitHub Actions"
+          git config --local user.email "actions@github.com"
+          
+          git add backend/.sqlx/
+          if git diff --cached --quiet; then
+            echo "Aucun changement dans le cache SQLx"
+          else
+            git commit -m "chore: update SQLx query cache"
+            git push
           fi
-          
-      - name: Commit and push
-        run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-          git add backend/.sqlx/ backend/Cargo.toml
-          git diff --cached --quiet || (git commit -m "chore: add SQLx cache" && git push)
